# ocr-bot

./: .env  .gitignore  Dockerfile  pyproject.toml
ocr_bot/: bot.py  service.py
tests/: test_ocr_bot.py
